--- a/cleni.html
+++ b/cleni.html
@@ -39,7 +39,12 @@
                 <li><span class="nick">Fufis</span> - ten tam stava nejake veci v kritive teda survivale</li>
                 <li><span class="nick">HenyM</span> - Robí kamerové systémy</li>
                 <li><span class="nick">Generál (kubo)</span> - Pokročilé bezpečnostné SBSkárske systémy užívaním robotov značky Citiznes</li>
-                <li><span class="nick">nejaky anty</span> - Mission: Kill Bedlessnoob TEDA Cíl: DOSTAT SE NA TROSPY SMP!</li>          
+                <li><span class="nick">Fanta</span> - Nemam sajni kto to je bro</li>
+                <li><span class="nick">Zovicek</span> - prosste zovo hackuje fizigame</li>
+                <li><span class="nick">nejaky anty</span> - Mission: Kill Bedlessnoob TEDA Cíl: DOSTAT SE NA TROSPY SMP!</li>      
+                <li><span class="nick">Jikxeron</span> - 421 FPS VIDEO UHC HAJLAJTS new pc</li>   
+                <li><span class="nick">25 VOLTI</span> - Spoluziak hestrenga známy vrestler</li>  
+                <li><span class="nick">lucker</span> - dodavatel forge modov</li>  
                 <li>Uz ma nic nenepada ked este nieco majte pls napiste na moj gmail</li> 
             </ol>
         </div>
