--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <a href="mapa.html"><button class="btn1"><i class="fas fa-map"></i> Mapu niekto hackol</button></a>
                 <a href="cleni.html"><button class="btn2"><i class="fas fa-users"></i> Členi</button></a>
                 <a onclick="ipalert()"><button class="btn3"><i class="fas fa-location-arrow"></i> IP</button></a>
+                <a href="generator.html"><button class="btn4"><i class="fas fa-plus-circle"></i> Whitelist Generator</button></a>
             </div>
         </div>
     </div>
