--- a/generator.html
+++ b/generator.html
@@ -26,7 +26,7 @@
         <div class="animate__animated animate__flip">
             <h1>Generator</h1> 
             <p class="uwuman">Tvoje ID je: <span class="kktuwu">09twrR94FKí4</span></p> 
-            <a href="https://bit.ly/32z6wYz"><button class="btn1">Klikni pre overenie</button></a>
+            <a href="40469.html"><button class="btn1">Klikni pre overenie</button></a>
         </div>
     </div>
     <script src="app/js/script.js"></script>
