--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="center">
         <div class="animate__animated animate__flip">
             <h1>TrospySMP</h1> <!--- Server Name -->
-            <p>Najkvalitnejší Creative Roleplay server!</p> <!--- Description -->
+            <p>Najkvalitnejší GTA Creative Roleplay server!</p> <!--- Description -->
             <div class="animate__animated animate__bounceIn animate__delay-1s">
                 <a href="mapa.html"><button class="btn1"><i class="fas fa-map"></i> Mapu niekto hackol</button></a>
                 <a href="cleni.html"><button class="btn2"><i class="fas fa-users"></i> Členi</button></a>
