--- a/cleni.html
+++ b/cleni.html
@@ -28,7 +28,7 @@
             <ol>
                 <li><span class="nick">Hestouš</span> - ten je proste všade</li>
                 <li><span class="nick">trospy19</span> - majytel smpé</li> 
-                <li><span class="nick">ImBeky</span> - amatér</li> 
+                <li><span class="nick">ImBeky</span> - vybera odpatky z kosa rad</li> 
                 <li><span class="nick">ReallyCZ</span> - strihac sira jakariho</li> 
                 <li><span class="nick">RizzRikk</span> - proste event winer</li>
                 <li><span class="nick">YouAreBesky</span> - neviem ako sa vola sry</li>
@@ -42,7 +42,7 @@
                 <li><span class="nick">Fanta</span> - Nemam sajni kto to je bro</li>
                 <li><span class="nick">Zovicek</span> - prosste zovo hackuje fizigame</li>
                 <li><span class="nick">nejaky anty</span> - Mission: Kill Bedlessnoob TEDA Cíl: DOSTAT SE NA TROSPY SMP!</li>      
-                <li><span class="nick">Jikxeron</span> - 421 FPS VIDEO UHC HAJLAJTS new pc</li>   
+                <li><span class="nick">Jikxeron</span> - 421 FPS VIDEO UHC HAJLAJTS keyboard sounds new pc</li>   
                 <li><span class="nick">25 VOLTI</span> - Spoluziak hestrenga známy vrestler</li>  
                 <li><span class="nick">lucker</span> - dodavatel forge modov</li>  
                 <li>Uz ma nic nenepada ked este nieco majte pls napiste na moj gmail</li> 
