--- a/index.html
+++ b/index.html
@@ -1,18 +1,35 @@
 <!DOCTYPE html>
-<html lang="en"> 
+<html lang="sk-SK"> 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TrospySMP</title> <!--- Website title -->
-    <link rel="stylesheet" href="dist/style.css"> 
-    <link rel="stylesheet" href="dist/test.css"> 
-    <meta property="og:site_name" content="webové stránky pripravyl oliminator pomocou inteligentnej samsung mikrovonky pre android">
-    <meta property="og:title" content="TrospySMP"> <!--- Embed Title -->
-    <meta property="og:description" content="TrospySMP server."> <!--- Embed Description -->
-    <meta name="theme-color" content=#000> <!--- Embed color -->
+    <meta name="robots" content="nofollow"/>
+
+    <meta name="description" content="Webstránka TrospySMP.">
+    <meta name="keywords" content="minecraft, server, mc, minecraft servery, majnr, trospysmp, survival server, skyblock, oneblock, survival economy, smp, trospy, hestreng, jixeron, trospy19">
+    <meta name="author" content="oliminator">
     <link rel="icon" href="assets/logo.ico"> 
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://trospysmp.cz">
+    <meta property="og:title" content="TrospySMP">
+    <meta property="og:site_name" content="webové stránky pripravyl oliminator pomocou inteligentnej samsung mikrovonky pre android">
+    <meta property="og:description" content="Webstránka TrospySMP.">
+    <meta property="og:image" content="https://i.imgur.com/cIj2Msa.jpg">
+    <meta name="theme-color" content=#000>
+
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://trospysmp.cz">
+    <meta property="twitter:title" content="TrospySMP">
+    <meta property="twitter:description" content="Webstránka TrospySMP.">
+    <meta property="twitter:image" content="https://i.imgur.com/cIj2Msa.jpg">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" integrity="sha512-c42qTSw/wPZ3/5LBzD+Bw5f7bSF2oxou6wEb+I/lqeaKV5FDIfMvvRp772y4jcJLKuGUOpbJMdg/BTl50fJYAw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="dist/style.css"> 
+    <script src="https://kit.fontawesome.com/5acf4d9e80.js" crossorigin="anonymous"></script>
+
+    <title>TrospySMP</title> 
 </head>
 <body>
     <div class="cursor">Fanart by x_KelayyF_L</div>
