--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h1>TrospySMP</h1> <!--- Server Name -->
             <p>Najkvalitnejší GTA Creative Roleplay server!</p> <!--- Description -->
             <div class="animate__animated animate__bounceIn animate__delay-1s">
-                <a href="mapa.html"><button class="btn1"><i class="fas fa-map"></i> Mapu niekto hackol</button></a>
+                <a href="https://goo.gl/maps/VyU9eK4qkzry3UhLA"><button class="btn1"><i class="fas fa-map"></i> Mapu niekto hackol</button></a>
                 <a href="cleni.html"><button class="btn2"><i class="fas fa-users"></i> Členi</button></a>
                 <a onclick="ipalert()"><button class="btn3"><i class="fas fa-location-arrow"></i> IP</button></a>
                 <a href="generator.html"><button class="btn4"><i class="fas fa-plus-circle"></i> Whitelist Generator</button></a>
