--- a/index.html
+++ b/index.html
@@ -1,125 +1,123 @@
 <!DOCTYPE html>
-<html lang="en">
-    <html lang="sk-SK">
-        <head>
-            <meta charset="UTF-8" />
-            <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-            <meta
-                name="viewport"
-                content="width=device-width, initial-scale=1.0"
-            />
+<html lang="sk-SK">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-            <!-- GOOGLE FONT -->
-            <link rel="preconnect" href="https://fonts.googleapis.com" />
-            <link
-                rel="preconnect"
-                href="https://fonts.gstatic.com"
-                crossorigin
-            />
-            <link
-                href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
-                rel="stylesheet"
-            />
-            <!-- GOOGLE FONT END -->
+        <!-- GOOGLE FONT -->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
+            rel="stylesheet"
+        />
+        <!-- GOOGLE FONT END -->
 
-            <meta
-                name="description"
-                content="TrospySMP je minecraftový survival SMP server kde hrá mnoho YouTuberov ako Trospy, Hestreng, Zovicek, Medvid3k a další."
-            />
-            <meta
-                name="keywords"
-                content="Trospysmp, smp, survival, minecraft, trospy, hestreng, majnr, minecraft survival, zovicek, Medvid3k"
-            />
+        <meta
+            name="description"
+            content="TrospySMP je minecraftový survival SMP server kde hrá mnoho YouTuberov ako Trospy, Hestreng, Zovicek, Medvid3k a další."
+        />
+        <meta
+            name="keywords"
+            content="Trospysmp, smp, survival, minecraft, trospy, hestreng, majnr, minecraft survival, zovicek, Medvid3k"
+        />
 
-            <meta name="author" content="TrospySMP" />
-            <link rel="icon" href="assets/logo.png" />
+        <meta name="author" content="TrospySMP" />
+        <link rel="icon" href="assets/logo.png" />
 
-            <meta property="og:type" content="website" />
-            <meta property="og:url" content="https://trospysmp.cz" />
-            <meta property="og:title" content="TrospySMP" />
-            <meta
-                property="og:description"
-                content="TrospySMP je minecraftový survival SMP server kde hrá mnoho YouTuberov ako Trospy, Hestreng, Zovicek, Medvid3k a další."
-            />
-            <meta name="theme-color" content="#4d4d4d" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://trospysmp.cz" />
+        <meta property="og:title" content="TrospySMP" />
+        <meta property="og:image" content="assets/pozadie.png" />
+        <meta property="og:site_name" content="TrospySMP" />
+        <meta
+            property="og:description"
+            content="TrospySMP je minecraftový survival SMP server kde hrá mnoho YouTuberov ako Trospy, Hestreng, Zovicek, Medvid3k a další."
+        />
+        <meta name="theme-color" content="#4d4d4d" />
 
-            <meta property="twitter:card" content="summary_large_image" />
-            <meta property="twitter:url" content="https://trospysmp.cz" />
-            <meta property="twitter:title" content="TrospySMP" />
-            <meta
-                property="twitter:description"
-                content="Trospysmp, smp, survival, minecraft, trospy, hestreng, majnr, minecraft survival, zovicek, Medvid3k"
-            />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:url" content="https://trospysmp.cz" />
+        <meta property="twitter:title" content="TrospySMP" />
+        <meta name="twitter:site" content="TrospySMP" />
+        <meta
+            property="twitter:description"
+            content="Trospysmp, smp, survival, minecraft, trospy, hestreng, majnr, minecraft survival, zovicek, Medvid3k"
+        />
 
-            <link
-                rel="stylesheet"
-                href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-                integrity="sha512-c42qTSw/wPZ3/5LBzD+Bw5f7bSF2oxou6wEb+I/lqeaKV5FDIfMvvRp772y4jcJLKuGUOpbJMdg/BTl50fJYAw=="
-                crossorigin="anonymous"
-                referrerpolicy="no-referrer"
-            />
-            <link rel="stylesheet" href="dist/style.css" />
-            <script
-                src="https://kit.fontawesome.com/5acf4d9e80.js"
-                crossorigin="anonymous"
-            ></script>
-            <script defer src="dist/script.js"></script>
-            <script
-                src="https://kit.fontawesome.com/5acf4d9e80.js"
-                crossorigin="anonymous"
-            ></script>
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+            integrity="sha512-c42qTSw/wPZ3/5LBzD+Bw5f7bSF2oxou6wEb+I/lqeaKV5FDIfMvvRp772y4jcJLKuGUOpbJMdg/BTl50fJYAw=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
+        <link rel="stylesheet" href="dist/style.css" />
+        <script
+            src="https://kit.fontawesome.com/5acf4d9e80.js"
+            crossorigin="anonymous"
+        ></script>
+        <script defer src="dist/script.js"></script>
+        <script
+            src="https://kit.fontawesome.com/5acf4d9e80.js"
+            crossorigin="anonymous"
+        ></script>
 
-            <link rel="icon" href="assets/trospysmp.ico" />
-            <title>TrospySMP - Trospyho SMP server</title>
-        </head>
-        <body style="background-image: url('../assets/pozadie.png')">
-            <p>Fanart by x_KelayyF_L</p>
-            <main>
-                <article class="head-text animate__animated animate__flip">
-                    <h1>TrospySMP</h1>
-                    <p>
-                        TrospySMP Najkvalitnejší
-                        <span class="server-type" id="server">TrosypsSMP</span>
-                        Creative Roleplay server!
-                    </p>
-                    <section
-                        class="animate__animated animate__bounceIn animate__delay-1s"
+        <link rel="icon" href="assets/trospysmp.ico" />
+        <title>TrospySMP - Trospyho SMP server</title>
+    </head>
+    <body style="background-image: url('../assets/pozadie.png')">
+        <p>Fanart by x_KelayyF_L</p>
+        <main>
+            <article class="head-text animate__animated animate__flip">
+                <h1>TrospySMP</h1>
+                <p>
+                    TrospySMP Najkvalitnejší
+                    <span class="server-type" id="server">TrosypsSMP</span>
+                    Creative Roleplay server!
+                </p>
+                <section
+                    class="animate__animated animate__bounceIn animate__delay-1s"
+                >
+                    <a
+                        title="Mapa TrospySMP"
+                        href="https://goo.gl/maps/VyU9eK4qkzry3UhLA"
+                        ><button class="btn1">
+                            <i class="fas fa-map"></i> Mapu niekto hackol
+                        </button></a
                     >
-                        <a href="https://goo.gl/maps/VyU9eK4qkzry3UhLA"
-                            ><button class="btn1">
-                                <i class="fas fa-map"></i> Mapu niekto hackol
-                            </button></a
-                        >
-                        <a href="cleni.html"
-                            ><button class="btn2">
-                                <i class="fas fa-users"></i> Členi
-                            </button></a
-                        >
-                        <a onclick="ipalert()"
-                            ><button class="btn3">
-                                <i class="fas fa-location-arrow"></i> IP
-                            </button></a
-                        >
-                        <a href="generator.html"
-                            ><button class="btn4">
-                                <i class="fas fa-plus-circle"></i> Whitelist
-                                Generator
-                            </button></a
-                        >
-                    </section>
-                </article>
-            </main>
-            <script
-                async
-                defer
-                src="https://scripts.simpleanalyticscdn.com/latest.js"
-            ></script>
-            <noscript
-                ><img
-                    src="https://queue.simpleanalyticscdn.com/noscript.gif"
-                    alt=""
-                    referrerpolicy="no-referrer-when-downgrade"
-            /></noscript>
-        </body>
-    </html>
+                    <a title="List TrospySMP čenov" href="cleni.html"
+                        ><button class="btn2">
+                            <i class="fas fa-users"></i> Členi
+                        </button></a
+                    >
+                    <a title="TrospySMP IP adresa" onclick="ipalert()"
+                        ><button class="btn3">
+                            <i class="fas fa-location-arrow"></i> IP
+                        </button></a
+                    >
+                    <a
+                        title="Generátor pre whitelist na TrospySMP"
+                        href="generator.html"
+                        ><button class="btn4">
+                            <i class="fas fa-plus-circle"></i> Whitelist
+                            Generator
+                        </button></a
+                    >
+                </section>
+            </article>
+        </main>
+        <script
+            async
+            defer
+            src="https://scripts.simpleanalyticscdn.com/latest.js"
+        ></script>
+        <noscript
+            ><img
+                src="https://queue.simpleanalyticscdn.com/noscript.gif"
+                alt=""
+                referrerpolicy="no-referrer-when-downgrade"
+        /></noscript>
+    </body>
 </html>
