--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <meta property="twitter:card" content="summary_large_image" />
         <meta property="twitter:url" content="https://trospysmp.cz" />
         <meta property="twitter:title" content="TrospySMP" />
-        <meta name="twitter:site" content="TrospySMP" />
+        <meta name="twitter:site" content="@trospysmp" />
         <meta
             property="twitter:description"
             content="Trospysmp, smp, survival, minecraft, trospy, hestreng, majnr, minecraft survival, zovicek, Medvid3k"
@@ -67,12 +67,13 @@
         <link rel="icon" href="assets/trospysmp.ico" />
         <title>TrospySMP - Trospyho SMP server</title>
     </head>
-    <body style="background-image: url('../assets/pozadie.png')">
-        <p>Fanart by x_KelayyF_L</p>
+    <body>
         <main>
-            <article class="head-text animate__animated animate__flip">
-                <h1>TrospySMP</h1>
-                <p>
+            <article class="head-text">
+                <h1 class="animate__animated animate__flip">
+                    TrospySMP - Trospyho SMP server
+                </h1>
+                <p class="animate__animated animate__flip">
                     TrospySMP Najkvalitnejší
                     <span class="server-type" id="server">TrosypsSMP</span>
                     Creative Roleplay server!
