--- a/index.html
+++ b/index.html
@@ -108,6 +108,38 @@
                     >
                 </section>
             </article>
+            <article class="mainpage-info">
+                <div class="container">
+                    <h2>Čo je trospysmp?</h2>
+                    <p>
+                        TrospySMP je minecraftový survival SMP server. TrospySMP
+                        beží na najnovšej FiveM verzrzii 1.18 a taktiež vyuźíva
+                        funkciu LifeSteal (Hráči si môži kradnúť srdcia a jedlo
+                        asi). Na TrospySMP hrá mnoho YouTuberov ako Trospy,
+                        Hestreng, Zovicek, Medvid3k a další.
+                    </p>
+                    <br />
+                    <h2>Ako sa dostanem na trospysmp?</h2>
+                    <p>
+                        Podľa všetkých dostupných informacii na TrospySMP sa
+                        môžete dostať vyhraním eventu, sútaže alebo otročením.
+                        Pokiaľ ale máte pár subs na yt tak je to možne aj tak.
+                    </p>
+                    <br />
+                    <h2>
+                        Čo keď nesplnam žiadne podmienky na prijatie na
+                        trospysmp?
+                    </h2>
+                    <p>
+                        To vôbec nevadí kedže na server môžeš prísť aj pomocou
+                        <a title="jediný funkčný whitelist generator" href=""
+                            >Whitelist Generatoru</a
+                        >
+                        kde je veľká šanca že dostaneš whitelist do dalšieho
+                        reštartu.
+                    </p>
+                </div>
+            </article>
         </main>
         <script
             async
