--- a/index.html
+++ b/index.html
@@ -141,6 +141,16 @@
                 </div>
             </article>
         </main>
+        <footer>
+            <p>Trospysmp 1973 - 2020</p>
+            <p class="credit">
+                Webstránky pripravil
+                <a title="odkaz na webstránku oliminatora" href=""
+                    >OLIMINATOR</a
+                >
+                v inteligentnej samsung hladničke
+            </p>
+        </footer>
         <script
             async
             defer
