--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     >
                     <a
                         title="Generátor pre whitelist na TrospySMP"
-                        href="generator.html"
+                        href="whitelist.html"
                         ><button class="btn4">
                             <i class="fas fa-plus-circle"></i> Whitelist
                             Generator
@@ -132,7 +132,9 @@
                     </h2>
                     <p>
                         To vôbec nevadí kedže na server môžeš prísť aj pomocou
-                        <a title="jediný funkčný whitelist generator" href=""
+                        <a
+                            title="jediný funkčný whitelist generator"
+                            href="whitelist.html"
                             >Whitelist Generatoru</a
                         >
                         kde je veľká šanca že dostaneš whitelist do dalšieho
@@ -145,7 +147,9 @@
             <p>Trospysmp 1973 - 2020</p>
             <p class="credit">
                 Webstránky pripravil
-                <a title="odkaz na webstránku oliminatora" href=""
+                <a
+                    title="odkaz na webstránku oliminatora"
+                    href="https://oliminator.net"
                     >OLIMINATOR</a
                 >
                 v inteligentnej samsung hladničke
