--- a/whitelist.html
+++ b/whitelist.html
@@ -73,7 +73,7 @@
                 <div class="whitelist">
                     <div class="animate__animated animate__flip">
                         <h1>Whitelist Generator</h1>
-                        <p class="id-bg" id="whitelist">b</p>
+                        <p class="id-bg" id="whitelist">chyba</p>
                         <a
                         title="Generátor pre whitelist na TrospySMP"
                         href="whitelist.html"
@@ -95,6 +95,7 @@
                 v inteligentnej samsung hladničke
             </p>
         </footer>
+        <script>document.getElementById("whitelist").innerHTML = Math.floor(Math.random() * 10000000) + 1000000 + "-" + Math.floor(Math.random() * 10) + 1000;</script>
         <script
             async
             defer
