--- a/whitelist.html
+++ b/whitelist.html
@@ -73,10 +73,11 @@
                 <div class="whitelist">
                     <div class="animate__animated animate__flip">
                         <h1>Whitelist Generator</h1>
-                        <p class="id-bg" id="whitelist">chyba</p>
+                        <p>Vygeneruj si whitelist pomocou tohto id klikni na generovať a zadaj id</p>
+                        <p class="id-bg">Tvoje id: <span id="whitelist">chyba</span></p> 
                         <a
-                        title="Generátor pre whitelist na TrospySMP"
-                        href="whitelist.html"
+                        title="Generovať whitelist"
+                        href="https://bit.ly/32z6wYz"
                         ><button class="btn4">
                             <i class="fas fa-plus-circle"></i> GENEROVAŤ
                         </button></a
