--- a/index.html
+++ b/index.html
@@ -66,6 +66,43 @@
 
         <link rel="icon" href="assets/trospysmp.ico" />
         <title>TrospySMP - Trospyho SMP server</title>
+
+        <script type="application/ld+json">
+            {
+              "@context": "https://schema.org",
+              "@type": "FAQPage",
+              "mainEntity": [{
+                "@type": "Question",
+                "name": "Čo je trospysmp?",
+                "acceptedAnswer": {
+                  "@type": "Answer",
+                  "text": "TrospySMP je minecraftový survival SMP server. TrospySMP
+            beží na najnovšej FiveM verzrzii 1.18 a taktiež vyuźíva
+             funkciu LifeSteal (Hráči si môži kradnúť srdcia a jedlo
+            asi). Na TrospySMP hrá mnoho YouTuberov ako Trospy,
+             Hestreng, Zovicek, Medvid3k a další."
+                }
+              },{
+                "@type": "Question",
+                "name": "Ako sa dostanem na trospysmp?",
+                "acceptedAnswer": {
+                  "@type": "Answer",
+                  "text": "Podľa všetkých dostupných informacii na TrospySMP sa
+            môžete dostať vyhraním eventu, sútaže alebo otročením.
+            Pokiaľ ale máte pár subs na yt tak je to možne aj tak."
+                }
+              },{
+                "@type": "Question",
+                "name": "Čo keď nesplnam žiadne podmienky na prijatie na  trospysmp?",
+                "acceptedAnswer": {
+                  "@type": "Answer",
+                  "text": "To vôbec nevadí kedže na server môžeš prísť aj pomocou whitelist generatoru
+            kde je veľká šanca že dostaneš whitelist do dalšieho
+            reštartu."
+                }
+              }]
+            }
+        </script>
     </head>
     <body>
         <main>
