vela javascriptu na random id
nemam sajny co to robí hyro pomohol

--- a/whitelist.html
+++ b/whitelist.html
@@ -58,7 +58,6 @@
             src="https://kit.fontawesome.com/5acf4d9e80.js"
             crossorigin="anonymous"
         ></script>
-        <script defer src="dist/script.js"></script>
         <script
             src="https://kit.fontawesome.com/5acf4d9e80.js"
             crossorigin="anonymous"
@@ -96,7 +95,7 @@
                 v inteligentnej samsung hladničke
             </p>
         </footer>
-        <script>document.getElementById("whitelist").innerHTML = Math.floor(Math.random() * 10000000) + 1000000 + "-" + Math.floor(Math.random() * 10) + 1000;</script>
+        <script src="dist/script.js"></script>
         <script
             async
             defer
