--- a/whitelist.html
+++ b/whitelist.html
@@ -43,7 +43,7 @@
         <meta name="twitter:site" content="@trospysmp" />
         <meta
             property="twitter:description"
-            content="Trospysmp, smp, survival, minecraft, trospy, hestreng, majnr, minecraft survival, zovicek, Medvid3k"
+            content="Trospysmp, smp, survival, minecraft, trospy, hestreng, majnr, minecraft survival, zovicek, Medvid3k, dynmapa, ip, trospysmp ip, ip adresa"
         />
 
         <link
@@ -58,6 +58,7 @@
             src="https://kit.fontawesome.com/5acf4d9e80.js"
             crossorigin="anonymous"
         ></script>
+        <script defer src="dist/script.js"></script>
         <script
             src="https://kit.fontawesome.com/5acf4d9e80.js"
             crossorigin="anonymous"
@@ -95,7 +96,6 @@
                 v inteligentnej samsung hladničke
             </p>
         </footer>
-        <script src="dist/script.js"></script>
         <script
             async
             defer
