--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <meta name="twitter:site" content="@trospysmp" />
         <meta
             property="twitter:description"
-            content="Trospysmp, smp, survival, minecraft, trospy, hestreng, majnr, minecraft survival, zovicek, Medvid3k"
+            content="Trospysmp, smp, survival, minecraft, trospy, hestreng, majnr, minecraft survival, zovicek, Medvid3k, dynmapa, ip, trospysmp ip, ip adresa"
         />
 
         <link
