--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     Creative Roleplay server!
                 </p>
                 <section
-                    class="animate__animated animate__bounceIn animate__delay-1s"
+                    class="button-container animate__animated animate__bounceIn animate__delay-1s"
                 >
                     <a
                         title="Mapa TrospySMP"
