--- a/whitelist.html
+++ b/whitelist.html
@@ -30,7 +30,10 @@
         <meta property="og:url" content="https://trospysmp.cz/whitelist.html" />
         <meta property="og:title" content="TrospySMP - Whitelist Generator" />
         <meta property="og:image" content="assets/pozadie.png" />
-        <meta property="og:site_name" content="TrospySMP - Whitelist Generator" />
+        <meta
+            property="og:site_name"
+            content="TrospySMP - Whitelist Generator"
+        />
         <meta
             property="og:description"
             content="TrospySMP je minecraftový survival SMP server kde hrá mnoho YouTuberov ako Trospy, Hestreng, Zovicek, Medvid3k a další."
@@ -39,11 +42,14 @@
 
         <meta property="twitter:card" content="summary_large_image" />
         <meta property="twitter:url" content="https://trospysmp.cz" />
-        <meta property="twitter:title" content="TrospySMP - Whitelist Generator" />
+        <meta
+            property="twitter:title"
+            content="TrospySMP - Whitelist Generator"
+        />
         <meta name="twitter:site" content="@trospysmp" />
         <meta
             property="twitter:description"
-            content="Trospysmp, smp, survival, minecraft, trospy, hestreng, majnr, minecraft survival, zovicek, Medvid3k, dynmapa, ip, trospysmp ip, ip adresa"
+            content="Trospysmp, smp, survival, minecraft, trospy, hestreng, majnr, minecraft survival, zovicek, Medvid3k"
         />
 
         <link
@@ -69,19 +75,22 @@
     </head>
     <body>
         <main>
-            <article>
-                <div class="whitelist">
-                    <div class="animate__animated animate__flip">
-                        <h1>Whitelist Generator</h1>
-                        <p>Vygeneruj si whitelist pomocou tohto id klikni na generovať a zadaj id</p>
-                        <p class="id-bg">Tvoje id: <span id="whitelist">chyba</span></p> 
-                        <a
-                        title="Generovať whitelist"
-                        href="https://bit.ly/32z6wYz"
+            <article class="whitelist">
+                <div class="animate__animated animate__flip">
+                    <h1>Whitelist Generator</h1>
+                    <p>
+                        Vygeneruj si whitelist pomocou tohto id klikni na
+                        generovať a zadaj id
+                    </p>
+                    <p class="id-bg">
+                        Tvoje id: <span id="whitelist">chyba</span>
+                    </p>
+                    <a title="Generovať whitelist" href="https://bit.ly/32z6wYz"
                         ><button class="btn4">
                             <i class="fas fa-plus-circle"></i> GENEROVAŤ
                         </button></a
                     >
+                </div>
             </article>
         </main>
         <footer>
