faq je main content odteraz

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </script>
     </head>
     <body>
-        <main>
+        <head>
             <article class="head-text">
                 <h1 class="animate__animated animate__flip">
                     TrospySMP - Trospyho SMP server
@@ -145,6 +145,8 @@
                     >
                 </section>
             </article>
+        </head>
+        <main>
             <article class="mainpage-info">
                 <div class="container">
                     <h2>Čo je trospysmp?</h2>
