404 stranka a twitter fix

--- a/cleni.html
+++ b/cleni.html
@@ -29,7 +29,10 @@
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://trospysmp.cz/cleni.html" />
         <meta property="og:title" content="TrospySMP - Cleni" />
-        <meta property="og:image" content="assets/pozadie.png" />
+        <meta
+            property="og:image"
+            content="https://trospysmp.cz/assets/trospympsaci.jpg"
+        />
         <meta property="og:site_name" content="TrospySMP - Cleni" />
         <meta
             property="og:description"
@@ -41,6 +44,7 @@
         <meta property="twitter:url" content="https://trospysmp.cz" />
         <meta property="twitter:title" content="TrospySMP - Cleni" />
         <meta name="twitter:site" content="@trospysmp" />
+        <meta name="twitter:creator" content="@trospysmp" />
         <meta
             property="twitter:description"
             content="Trospysmp, smp, survival, minecraft, trospy, hestreng, majnr, minecraft survival, zovicek, Medvid3k, dynmapa, ip, trospysmp ip, ip adresa"
