--- a/404.html
+++ b/404.html
@@ -27,16 +27,13 @@
         <link rel="icon" href="assets/logo.png" />
 
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://trospysmp.cz/whitelist.html" />
-        <meta property="og:title" content="TrospySMP - Whitelist Generator" />
+        <meta property="og:url" content="https://trospysmp.cz/pozadie.html" />
+        <meta property="og:title" content="TrospySMP - 404" />
         <meta
             property="og:image"
             content="https://trospysmp.cz/assets/wl.jpg"
         />
-        <meta
-            property="og:site_name"
-            content="TrospySMP - Whitelist Generator"
-        />
+        <meta property="og:site_name" content="TrospySMP - 404" />
         <meta
             property="og:description"
             content="TrospySMP je minecraftový survival SMP server kde hrá mnoho YouTuberov ako Trospy, Hestreng, Zovicek, Medvid3k a další."
@@ -45,10 +42,7 @@
 
         <meta property="twitter:card" content="summary_large_image" />
         <meta property="twitter:url" content="https://trospysmp.cz" />
-        <meta
-            property="twitter:title"
-            content="TrospySMP - Whitelist Generator"
-        />
+        <meta property="twitter:title" content="TrospySMP - 404" />
         <meta name="twitter:site" content="@trospysmp" />
         <meta name="twitter:creator" content="@trospysmp" />
         <meta
@@ -75,28 +69,20 @@
         ></script>
 
         <link rel="icon" href="assets/trospysmp.ico" />
-        <title>TrospySMP - Whitelist Generator</title>
+        <title>TrospySMP - 404</title>
     </head>
     <body>
-        <main>
-            <article class="whitelist">
-                <div class="animate__animated animate__flip">
-                    <h1>Whitelist Generator</h1>
-                    <p>
-                        Vygeneruj si whitelist pomocou tohto id klikni na
-                        generovať a zadaj id
-                    </p>
-                    <p class="id-bg">
-                        Tvoje id: <span id="whitelist">chyba</span>
-                    </p>
-                    <a title="Generovať whitelist" href="https://bit.ly/32z6wYz"
-                        ><button class="btn4">
-                            <i class="fas fa-plus-circle"></i> GENEROVAŤ
-                        </button></a
-                    >
-                </div>
-            </article>
-        </main>
+        <section class="error">
+            <div class="animate__animated animate__flip">
+                <h1>TAKETO STRANKI NEPOZNAM!!!! VRAZ SA DOMOV</h1>
+                <p>Nič tu nieje trospy to asi odniesol na inu planetu</p>
+                <a title="Generovať whitelist" href="index.html"
+                    ><button class="btn4">
+                        <i class="fas fa-home"></i> DOMOV
+                    </button></a
+                >
+            </div>
+        </section>
         <footer>
             <p>Trospysmp 1973 - 2020</p>
             <p class="credit">
