socialne siete v FAQ

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     Creative Roleplay server!
                 </p>
                 <section
-                    class="button-container animate__animated animate__bounceIn animate__delay-1s"
+                    class="button-container animate__animated animate__bounceIn"
                 >
                     <a
                         title="Mapa TrospySMP"
@@ -153,36 +153,81 @@
         <main>
             <article class="mainpage-info">
                 <div class="container">
-                    <h2>Čo je trospysmp?</h2>
-                    <p>
-                        TrospySMP je minecraftový survival SMP server. TrospySMP
-                        beží na najnovšej FiveM verzrzii 1.18 a taktiež vyuźíva
-                        funkciu LifeSteal (Hráči si môži kradnúť srdcia a jedlo
-                        asi). Na TrospySMP hrá mnoho YouTuberov ako Trospy,
-                        Hestreng, Zovicek, Medvid3k a další.
-                    </p>
+                    <section>
+                        <h2>Čo je trospysmp?</h2>
+                        <p>
+                            TrospySMP je minecraftový survival SMP server.
+                            TrospySMP beží na najnovšej FiveM verzrzii 1.18 a
+                            taktiež vyuźíva funkciu LifeSteal (Hráči si môži
+                            kradnúť srdcia a jedlo asi). Na TrospySMP hrá mnoho
+                            YouTuberov ako Trospy, Hestreng, Zovicek, Medvid3k a
+                            další.
+                        </p>
+                    </section>
                     <br />
-                    <h2>Ako sa dostanem na trospysmp?</h2>
-                    <p>
-                        Podľa všetkých dostupných informacii na TrospySMP sa
-                        môžete dostať vyhraním eventu, sútaže alebo otročením.
-                        Pokiaľ ale máte pár subs na yt tak je to možne aj tak.
-                    </p>
+                    <section>
+                        <h2>Ako sa dostanem na trospysmp?</h2>
+                        <p>
+                            Podľa všetkých dostupných informacii na TrospySMP sa
+                            môžete dostať vyhraním eventu, sútaže alebo
+                            otročením. Pokiaľ ale máte pár subs na yt tak je to
+                            možne aj tak.
+                        </p>
+                    </section>
                     <br />
-                    <h2>
-                        Čo keď nesplnam žiadne podmienky na prijatie na
-                        trospysmp?
-                    </h2>
-                    <p>
-                        To vôbec nevadí kedže na server môžeš prísť aj pomocou
-                        <a
-                            title="jediný funkčný whitelist generator"
-                            href="whitelist.html"
-                            >Whitelist Generatoru</a
-                        >
-                        kde je veľká šanca že dostaneš whitelist do dalšieho
-                        reštartu.
-                    </p>
+                    <section>
+                        <h2>
+                            Čo keď nesplnam žiadne podmienky na prijatie na
+                            trospysmp?
+                        </h2>
+                        <p>
+                            To vôbec nevadí kedže na server môžeš prísť aj
+                            pomocou
+                            <a
+                                title="jediný funkčný whitelist generator"
+                                href="whitelist.html"
+                                >Whitelist Generatoru</a
+                            >
+                            kde je veľká šanca že dostaneš whitelist do dalšieho
+                            reštartu.
+                        </p>
+                    </section>
+                    <br />
+                    <section>
+                        <h2>Aké ma trospysmp socialne siete?</h2>
+                        <p>
+                            Trospysmp ako najväčší RPG economy server má veľa
+                            sociálnych sietí
+                        </p>
+                        <ul>
+                            <li>
+                                <a
+                                    title="trospysmp facebook"
+                                    href="https://www.facebook.com/profile.php?id=100078108044495"
+                                    >Facebook</a
+                                >
+                            </li>
+                            <li>
+                                <a
+                                    title="trospysmp twitter"
+                                    href="https://twitter.com/trospysmp"
+                                    >Twitter</a
+                                >
+                            </li>
+                            <li>
+                                <a
+                                    title="trospysmp boojang"
+                                    href="https://bit.ly/32z6wYz"
+                                    >Boojang</a
+                                >
+                            </li>
+                        </ul>
+                        <p>
+                            Pokial ešte nesleduješ TrospySMP trospyho SMP
+                            economy server na sociálnych sietiach tak robíš
+                            chybu!
+                        </p>
+                    </section>
                 </div>
             </article>
         </main>
