--- a/index.html
+++ b/index.html
@@ -134,11 +134,9 @@
                             <i class="fas fa-users"></i> Členi
                         </button></a
                     >
-                    <a title="TrospySMP IP adresa" onclick="ipalert()"
-                        ><button class="btn3">
-                            <i class="fas fa-location-arrow"></i> IP
-                        </button></a
-                    >
+                    <button onclick="ipalert()" class="btn3">
+                        <i class="fas fa-location-arrow"></i> IP
+                    </button>
                     <a
                         title="Generátor pre whitelist na TrospySMP"
                         href="whitelist.html"
