--- a/cleni.html
+++ b/cleni.html
@@ -36,7 +36,7 @@
         <meta property="og:site_name" content="TrospySMP - Cleni" />
         <meta
             property="og:description"
-            content="TrospySMP je minecraftový survival SMP server kde hrá mnoho YouTuberov ako Trospy, Hestreng, Zovicek, Medvid3k a další."
+            content="TrospySMP je minecraftový survival SMP server kde hrá mnoho YouTuberov ako Trospy, Hestreng, Zovicek, Medvid3k a další. Na tejto TrospySMP stránky nájdeš všetky informácie o TrospySMP a ako sa dostať na Trospysmp."
         />
         <meta name="theme-color" content="#4d4d4d" />
 
@@ -47,7 +47,7 @@
         <meta name="twitter:creator" content="@trospysmp" />
         <meta
             property="twitter:description"
-            content="Trospysmp, smp, survival, minecraft, trospy, hestreng, majnr, minecraft survival, zovicek, Medvid3k, dynmapa, ip, trospysmp ip, ip adresa"
+            content="TrospySMP je minecraftový survival SMP server kde hrá mnoho YouTuberov ako Trospy, Hestreng, Zovicek, Medvid3k a další. Na tejto TrospySMP stránky nájdeš všetky informácie o TrospySMP a ako sa dostať na Trospysmp."
         />
 
         <link
