--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <meta
             name="description"
-            content="TrospySMP je minecraftový survival SMP server kde hrá mnoho YouTuberov ako Trospy, Hestreng, Zovicek, Medvid3k a další."
+            content="TrospySMP je minecraftový survival SMP server kde hrá mnoho YouTuberov ako Trospy, Hestreng, Zovicek, Medvid3k a další. Na tejto TrospySMP stránky nájdeš všetky informácie o TrospySMP a ako sa dostať na Trospysmp."
         />
         <meta
             name="keywords"
