trospy sekcia + OPRAVENIE VECI radsej budem ticho akej

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </script>
     </head>
     <body>
-        <head>
+        <header>
             <article class="head-text">
                 <h1 class="animate__animated animate__flip">
                     TrospySMP - Trospyho SMP server
@@ -147,7 +147,7 @@
                     >
                 </section>
             </article>
-        </head>
+        </header>
         <main>
             <article class="mainpage-info">
                 <div class="container">
