--- a/trospy.html
+++ b/trospy.html
@@ -121,7 +121,7 @@
         <main class="profile-main">
             <article>
                 <h2>Niečo o trospy</h2>
-                <h3>Kto ten trospy vôbec je?</h3>
+                <h3>Čo ten Trsorpy vôbec je?</h3>
                 <p>
                     Trospy sa zameruje na hru GTA ktorú streamuje na svoj Twitch
                     účet linknutý hore. Trospy disponuje širokým sortimentom
