--- a/cleni.html
+++ b/cleni.html
@@ -119,7 +119,7 @@
                             </li>
                             <li>
                                 <span class="nick">Fufis</span> - ten tam stava
-                                nejake veci v kritive teda survivale
+                                nejake veci v kritive teda survivale ale vie dobre retrix pravidla
                             </li>
                             <li>
                                 <span class="nick">HenyM</span> - Robí kamerové
@@ -128,19 +128,19 @@
                             <li>
                                 <span class="nick">Generál (kubo)</span> -
                                 Pokročilé bezpečnostné SBSkárske systémy
-                                užívaním robotov značky Citiznes
+                                užívaním robotov značky Citiznes a api
                             </li>
                             <li>
                                 <span class="nick">Fanta</span> - Nemam sajni
-                                kto to je bro
+                                kto to je bro ale fanta mi nechuti
                             </li>
                             <li>
                                 <span class="nick">Zovicek</span> - prosste zovo
-                                hackuje fizigame
+                                hackuje fizigame kto postavi lepsiu siryakari figurku
                             </li>
                             <li>
                                 <span class="nick">nejaky anty</span> - Mission:
-                                Kill Bedlessnoob TEDA Cíl: DOSTAT SE NA TROSPY
+                                Kill Bedlessnoob *TEDA* Cíl: DOSTAT SE NA TROSPY
                                 SMP!
                             </li>
                             <li>
