--- a/index.html
+++ b/index.html
@@ -1,256 +1,12 @@
 <!DOCTYPE html>
-<html lang="sk-SK">
+<html lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-        <!-- GOOGLE FONT -->
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
-            rel="stylesheet"
-        />
-        <!-- GOOGLE FONT END -->
-
-        <meta
-            name="description"
-            content="TrospySMP je minecraftový survival SMP server kde hrá mnoho YouTuberov ako Trospy, Hestreng, Zovicek, Medvid3k a další. Na tejto TrospySMP stránky nájdeš všetky informácie o TrospySMP a ako sa dostať na Trospysmp."
-        />
-        <meta
-            name="keywords"
-            content="Trospysmp, smp, survival, minecraft, trospy, hestreng, majnr, minecraft survival, zovicek, Medvid3k"
-        />
-
-        <meta name="author" content="TrospySMP" />
-        <link rel="icon" href="assets/logo.png" />
-
-        <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://trospysmp.cz" />
-        <meta property="og:title" content="TrospySMP" />
-        <meta
-            property="og:image"
-            content="https://trospysmp.cz/assets/pozadie.jpg"
-        />
-        <meta property="og:site_name" content="TrospySMP" />
-        <meta
-            property="og:description"
-            content="TrospySMP je minecraftový survival SMP server kde hrá mnoho YouTuberov ako Trospy, Hestreng, Zovicek, Medvid3k a další."
-        />
-        <meta name="theme-color" content="#4d4d4d" />
-
-        <meta property="twitter:card" content="summary_large_image" />
-        <meta property="twitter:url" content="https://trospysmp.cz" />
-        <meta property="twitter:title" content="TrospySMP" />
-        <meta name="twitter:site" content="@trospysmp" />
-        <meta name="twitter:creator" content="@trospysmp" />
-        <meta
-            property="twitter:description"
-            content="Trospysmp, smp, survival, minecraft, trospy, hestreng, majnr, minecraft survival, zovicek, Medvid3k, dynmapa, ip, trospysmp ip, ip adresa"
-        />
-
-        <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-            integrity="sha512-c42qTSw/wPZ3/5LBzD+Bw5f7bSF2oxou6wEb+I/lqeaKV5FDIfMvvRp772y4jcJLKuGUOpbJMdg/BTl50fJYAw=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"
-        />
-        <link rel="stylesheet" href="dist/style.css" />
-        <script
-            src="https://kit.fontawesome.com/5acf4d9e80.js"
-            crossorigin="anonymous"
-        ></script>
-        <script defer src="dist/script.js"></script>
-        <script
-            src="https://kit.fontawesome.com/5acf4d9e80.js"
-            crossorigin="anonymous"
-        ></script>
-
-        <link rel="icon" href="assets/trospysmp.ico" />
-        <title>TrospySMP - Trospyho SMP server</title>
-
-        <script type="application/ld+json">
-            {
-              "@context": "https://schema.org",
-              "@type": "FAQPage",
-              "mainEntity": [{
-                "@type": "Question",
-                "name": "Čo je trospysmp?",
-                "acceptedAnswer": {
-                  "@type": "Answer",
-                  "text": "TrospySMP je minecraftový survival SMP server. TrospySMP
-            beží na najnovšej FiveM verzrzii 1.18 a taktiež vyuźíva
-             funkciu LifeSteal (Hráči si môži kradnúť srdcia a jedlo
-            asi). Na TrospySMP hrá mnoho YouTuberov ako Trospy,
-             Hestreng, Zovicek, Medvid3k a další."
-                }
-              },{
-                "@type": "Question",
-                "name": "Ako sa dostanem na trospysmp?",
-                "acceptedAnswer": {
-                  "@type": "Answer",
-                  "text": "Podľa všetkých dostupných informacii na TrospySMP sa
-            môžete dostať vyhraním eventu, sútaže alebo otročením.
-            Pokiaľ ale máte pár subs na yt tak je to možne aj tak."
-                }
-              },{
-                "@type": "Question",
-                "name": "Čo keď nesplnam žiadne podmienky na prijatie na  trospysmp?",
-                "acceptedAnswer": {
-                  "@type": "Answer",
-                  "text": "To vôbec nevadí kedže na server môžeš prísť aj pomocou whitelist generatoru
-            kde je veľká šanca že dostaneš whitelist do dalšieho
-            reštartu."
-                }
-              }]
-            }
-        </script>
+        <title>Document</title>
     </head>
     <body>
-        <header>
-            <article class="head-text">
-                <h1 class="animate__animated animate__flip">
-                    TrospySMP - Trospyho SMP server
-                </h1>
-                <p class="animate__animated animate__flip">
-                    TrospySMP Najkvalitnejší
-                    <span class="server-type" id="server">TrosypsSMP</span>
-                    Creative Roleplay server!
-                </p>
-                <section
-                    class="button-container animate__animated animate__bounceIn"
-                >
-                    <a
-                        title="Mapa TrospySMP"
-                        href="https://goo.gl/maps/VyU9eK4qkzry3UhLA"
-                        ><button class="btn1">
-                            <i class="fas fa-map"></i> Mapu niekto hackol
-                        </button></a
-                    >
-                    <a title="List TrospySMP čenov" href="cleni.html"
-                        ><button class="btn2">
-                            <i class="fas fa-users"></i> Členi
-                        </button></a
-                    >
-                    <button onclick="ipalert()" class="btn3">
-                        <i class="fas fa-location-arrow"></i> IP
-                    </button>
-                    <a
-                        title="Generátor pre whitelist na TrospySMP"
-                        href="whitelist.html"
-                        ><button class="btn4">
-                            <i class="fas fa-plus-circle"></i> Whitelist
-                            Generator
-                        </button></a
-                    >
-                </section>
-            </article>
-        </header>
-        <main>
-            <article class="mainpage-info">
-                <div class="container">
-                    <section>
-                        <h2>Čo je trospysmp?</h2>
-                        <p>
-                            TrospySMP je minecraftový survival SMP server.
-                            TrospySMP beží na najnovšej FiveM verzrzii 1.18 a
-                            taktiež vyuźíva funkciu LifeSteal (Hráči si môži
-                            kradnúť srdcia a jedlo asi). Na TrospySMP hrá mnoho
-                            YouTuberov ako Trospy, Hestreng, Zovicek, Medvid3k a
-                            další.
-                        </p>
-                    </section>
-                    <br />
-                    <section>
-                        <h2>Ako sa dostanem na trospysmp?</h2>
-                        <p>
-                            Podľa všetkých dostupných informacii na TrospySMP sa
-                            môžete dostať vyhraním eventu, sútaže alebo
-                            otročením. Pokiaľ ale máte pár subs na yt tak je to
-                            možne aj tak.
-                        </p>
-                    </section>
-                    <br />
-                    <section>
-                        <h2>
-                            Čo keď nesplnam žiadne podmienky na prijatie na
-                            trospysmp?
-                        </h2>
-                        <p>
-                            To vôbec nevadí kedže na server môžeš prísť aj
-                            pomocou
-                            <a
-                                title="jediný funkčný whitelist generator"
-                                href="whitelist.html"
-                                >Whitelist Generatoru</a
-                            >
-                            kde je veľká šanca že dostaneš whitelist do dalšieho
-                            reštartu.
-                        </p>
-                    </section>
-                    <br />
-                    <section>
-                        <h2>Aké ma trospysmp socialne siete?</h2>
-                        <p>
-                            Trospysmp ako najväčší RPG economy server má veľa
-                            sociálnych sietí
-                        </p>
-                        <ul>
-                            <li>
-                                <a
-                                    title="trospysmp facebook"
-                                    href="https://www.facebook.com/profile.php?id=100078108044495"
-                                    >Facebook</a
-                                >
-                            </li>
-                            <li>
-                                <a
-                                    title="trospysmp twitter"
-                                    href="https://twitter.com/trospysmp"
-                                    >Twitter</a
-                                >
-                            </li>
-                            <li>
-                                <a
-                                    title="trospysmp boojang"
-                                    href="https://bit.ly/32z6wYz"
-                                    >Boojang</a
-                                >
-                            </li>
-                        </ul>
-                        <p>
-                            Pokial ešte nesleduješ TrospySMP trospyho SMP
-                            economy server na sociálnych sietiach tak robíš
-                            chybu!
-                        </p>
-                    </section>
-                </div>
-            </article>
-        </main>
-        <footer>
-            <p>Trospysmp 1973 - 2020</p>
-            <p class="credit">
-                Webstránky pripravil
-                <a
-                    title="odkaz na webstránku oliminatora"
-                    href="https://oliminator.net"
-                    >OLIMINATOR</a
-                >
-                v inteligentnej samsung hladničke
-            </p>
-        </footer>
-        <script
-            async
-            defer
-            src="https://scripts.simpleanalyticscdn.com/latest.js"
-        ></script>
-        <noscript
-            ><img
-                src="https://queue.simpleanalyticscdn.com/noscript.gif"
-                alt=""
-                referrerpolicy="no-referrer-when-downgrade"
-        /></noscript>
+        <%- title %>
     </body>
 </html>
